refactor(项目设置): 优化状态流单元测试代码